# report

./: .gitignore  basesetting.py  main.py  pyproject.toml  pyproject.toml_tmp  start.sh
out_in_data/: setting.yaml
out_in_data/temp/: Tamplate.xlsm  Tamplate.xlsx  Tamplate_maket.xlsx
python_script/: __init__.py  main.py  test.py  walk_dir.py
python_script/Logging/: __init__.py  config.yaml  logging_err.py
python_script/Xlsx/: __init__.py  merge_xlsx.py  rw_xlsx.py
python_script/app/: formating_tu_ts.py  qml_interface.py  singleton.py  walk_dir.py
python_script/csv/: АМГУНЬ.csv  АНОСОВСКАЯ.csv  АПКАН.csv  БАДЖАЛ.csv  БЕЛЕНЬКАЯ.csv  БЕСТУЖЕВО.csv  БОЛЕН.csv  Ведомость Амгунь  csv.xlsx  Ведомость Беленькая  csv.xlsx  Ведомость Болен  csv.xlsx  Ведомость Герби  csv.xlsx  Ведомость Горин  csv.xlsx  Ведомость Джамку  csv.xlsx  Ведомость Дуссе-Алинь  csv.xlsx  Ведомость Мавринский  csv.xlsx  Ведомость Могды  csv.xlsx  Ведомость Мони  csv.xlsx  Ведомость Мугуле  csv.xlsx  Ведомость Муртыгит  csv.xlsx  Ведомость Орокот  csv.xlsx  Ведомость Пурикан  csv.xlsx  Ведомость Сети  csv.xlsx  Ведомость Силинка  csv.xlsx  Ведомость Солони  csv.xlsx  Ведомость Сонах  csv.xlsx  Ведомость Сулук  csv.xlsx  Ведомость Ургал-1  csv.xlsx  Ведомость Уркальту  csv.xlsx  Ведомость Хальгасо  csv.xlsx  Ведомость Чемчуко  csv.xlsx  Ведомость Штурм  csv.xlsx  Ведомость Эанга  csv.xlsx  Ведомость Эбгунь  csv.xlsx  Ведомость Эворон  csv.xlsx  ГЕРБИ.csv  ГОРИН.csv  ДЖАМКУ.csv  ДИДОН.csv  ДУКИ.csv  ДУССЕ-АЛИНЬ.csv  (+41 more)
python_script/dat/: ABTC#3.txt  ALKAN#1.txt  ALKAN#3.txt  AMGUN#1.txt  AMGUN#A.txt  (+156 more)
(+87 files in other folders)
