[tool.poetry]
name = "create_report"
version = "0.1.0"
description = ""
authors = ["Andrey <biziuraa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
openpyxl = "^3.0.9"
PyQt5 = "^5.15.6"
PyYAML = "^6.0"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
