[tool.poetry]
name = "report"
version = "0.1.0"
description = ""
authors = ["Andrey <biziuraa@gmail.com>"]

[tool.poetry.scripts]
report_sc = "main.py:main"

[tool.poetry.dependencies]
python = "^3.11.1"
pandas = "^1.5.3"
pyyaml = "^6.0"
colorlog = "^6.7.0"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
